add getFans and getFansToOthers api spec
